--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
    <string name="menuitem_line_width">Line Width</string>
    <string name="menuitem_save">Save</string>
    <string name="menuitem_print">Print</string>
+   <string name="menuitem_colorize">Background Color</string>
+   <string name="menuitem_insertphoto">Insert Photo</string>
    <string name="message_erase">Erase the drawing?</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_saved">Your saved painting can be viewed in the Photos app by selecting Device Folders from that app\'s menu</string>
